--- a/css/about.css
+++ b/css/about.css
@@ -77,6 +77,9 @@ ol,li .favorites {
 
 
 /*** Footer & Return***/
+#footer p {
+    font-size: 0.75rem;
+}
 #footer a {
     text-decoration: none;
     color: rgb(43, 42, 41);
