--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,12 @@
+/* CSS reset */
+html {
+    box-sizing: border-box;
+  }
 
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+ /* end of CSS reset */
 
 
 /*This is a comment in css*/
