--- a/css/recipe.css
+++ b/css/recipe.css
@@ -210,6 +210,10 @@ iframe {
         font-size: 1.1rem;
     }
 
+    .steps ol, .ingredients ul {
+        padding-left: 20px;
+    }
+
     iframe {
         width: 62vw;
         height: 173px;
